<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ComcoreServer</string>
    <string name="action_settings">Settings</string>
    <string name="tts_speaker_bt_disconnected">蓝牙未连接</string>
    <string name="contact_err_req_fail">通讯录REQ错误，5秒后重试</string>
    <string name="contact_err_wrong_state">通讯录State错误，5秒后重试</string>
    <string name="contact_err_illegal_requset">通讯录同步命令不合法</string>
    <string name="contact_err_not_established">未建立连接，无法同步通讯录</string>
    <string name="contact_unknown">未知</string>
    <string name="device_delete_success">设备删除成功</string>
    <string name="hand_brake_tips">请注意您的手刹未松开</string>
    <string name="test_base">基本数据</string>
    <string name="test_radar">雷达数据</string>
    <string name="test_air">空调数据</string>
    <string name="test_door">门窗灯锁</string>
    <string name="test_wheel">方向盘</string>
    <string name="test_warn">报警数据</string>
    <string name="mcu_update_tips">系统正在升级,请不要断电</string>
    <string name="debug_switch">调试开关</string>
    <string name="debug_reset">清空日志</string>
    <string name="debug_read">读取日志，慎用</string>
    <string name="debug_read_ac">空调日志</string>
    <string name="debug_can_data">CAN数据核对</string>
    
    <string name="btn_check_data">校验数据</string>
    <string name="debug_error">错误</string>
    <string name="debug_no_reponse">不支持</string>
    <string name="debug_success">支持</string>
    
    <string name="day_str">天</string>
    <string name="overdue">过期</string>
    <string name="unavailable_flag">——</string>
    
    <string name="exit">退出</string>
    <string name="move">移动</string>
    <string name="val_int">值类型：数字</string>
    <string name="val_str">值类型：字符</string>
    <string name="val_other">值类型：其他</string>
    <string name="req">查询</string>
    <string name="upgrade_protocl">测试界面</string>

  <string name="settings_id_title">Device identifier</string>
  <string name="settings_url_title">Server URL</string>
  <string name="settings_url_summary">Tracking server URL</string>
  <string name="settings_interval_title">Frequency</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>
  <string name="settings_status_title">Service status</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Service stopped</string>
  <string name="settings_status_on_summary">Service running</string>
  <string name="settings_accuracy_title">Location accuracy</string>
  <string name="settings_accuracy_summary">Desired location accuracy</string>
  <string name="settings_accuracy_high">High</string>
  <string name="settings_accuracy_medium">Medium</string>
  <string name="settings_accuracy_low">Low</string>
  <string name="settings_foreground_title">Foreground service</string>
  <string name="settings_foreground_summary">Increase service priority</string>
  <string name="menu_status">Status</string>
  <string name="menu_about">About</string>
  <string name="menu_shortcuts">Add shortcuts</string>
  <string name="menu_clear">Clear</string>
  <string name="about_description">Real time GPS tracker for Android devices. Compatible with Traccar Server and other tracking systems.</string>
  <string name="about_license">This application is free and open source, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
  <string name="about_web">For more information visit\nwww.traccar.org/client</string>
  <string name="status_service_create">Service started</string>
  <string name="status_service_destroy">Service stopped</string>
  <string name="status_send_success">Send successfully</string>
  <string name="status_send_fail">Send failed</string>
  <string name="status_location_update">Location update</string>
  <string name="status_network_online">Network online</string>
  <string name="status_network_offline">Network offline</string>
  <string name="hidden_app_name">Device Settings</string>
  <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
  <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>   
    <string name="settings_url_default_value" translatable="false">http://www.18gps.net:7018</string>

    <string-array name="settings_accuracy_values" translatable="false">
        <item>high</item>
        <item>medium</item>
        <item>low</item>
    </string-array>

    <string-array name="settings_accuracy_names">
        <item>@string/settings_accuracy_high</item>
        <item>@string/settings_accuracy_medium</item>
        <item>@string/settings_accuracy_low</item>
    </string-array>
</resources>